use Instant as default time source; override when we control the JVM args